--- a/tetris.html
+++ b/tetris.html
@@ -23,6 +23,6 @@
     </style>
 </head>
 <body>
-    <script src="tetris.js"></script>
+    <script src="tetris for blog.js"></script>
 </body>
 </html>
